# TDTechAdmin

./: .gitignore  Cargo.toml  README.md
at-serial/: Cargo.toml
at-serial/src/: error.rs  lib.rs  serial.rs  terminal.rs
at-serial/src/examples/: at_terminal.rs
simple-terminal/: Cargo.toml
simple-terminal/src/: main.rs  terminal.rs
src/: atservice.rs  main.rs
src/commands/: mod.rs
src/models/: device_info.rs  mod.rs
src/services/: mod.rs  query_info.rs
