[package]
name = "at-serial"
version = "0.1.0"
edition = "2021"
description = "A library for communicating with AT command-based serial devices"
license = "MIT"

[dependencies]
serialport = "4.7"
log = "0.4.26"
thiserror = "2.0.12"
env_logger = "0.11.6"

[[bin]]
name = "at_terminal"
path = "src/examples/at_terminal.rs"